--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,11 @@ services:
       - "6013:6013"
     env_file:
       - .env
-    restart: on-failure
+    restart: always
+    networks:
+      - project_network
 
+
+networks:
+  project_network:
+    external: true
