chore(docker-compose.yml): define driver bridge para project_network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
     networks:
       - project_network
 
-
 networks:
-  project_network:
-    external: true
+    project_network:
+        driver: bridge
