chore(package): adiciona commitlint e husky

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
   "files": [
     "bin/",
     "dist/"
-  ]
+  ],
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "husky": "^9.1.7"
+  }
 }
