--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "commit-ai-hub",
   "version": "2.0.0",
-  "description": "CommitIA é uma ferramenta CLI que utiliza LLM para gerar mensagens de commit inteligentes",
+  "description": "CommitAI é uma ferramenta CLI que utiliza LLM para gerar mensagens de commit inteligentes",
   "main": "bin/cli.js",
   "bin": {
-    "commitia": "./bin/cli.js"
+    "commitai": "./bin/cli.js"
   },
   "scripts": {
     "postinstall": "node bin/install.js"
