--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commit-ai-hub",
   "version": "2.0.0",
-  "description": "CommitAI é uma ferramenta CLI que utiliza LLM para gerar mensagens de commit inteligentes",
+  "description": "CommitAI is a CLI tool that uses LLM to generate intelligent commit messages",
   "main": "bin/cli.js",
   "bin": {
     "commitai": "./bin/cli.js"
