chore(package): update package name to commit-ai-hublast

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "commit-ai-hub",
+  "name": "commit-ai-hublast",
   "version": "2.0.0",
   "description": "CommitAI is a CLI tool that uses LLM to generate intelligent commit messages",
   "main": "bin/cli.js",
